Fix for saWrapped in sidebar

--- a/may/src/style/screen.template.css
+++ b/may/src/style/screen.template.css
@@ -6066,7 +6066,7 @@ div.saPopupOverlay {
 .saNotificationBadge.saEmpty {
   visibility: hidden;
 }
-.saSidenav .saToggleGroup {
+.saToggleGroup {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -6077,16 +6077,16 @@ div.saPopupOverlay {
   width: 100%;
   box-sizing: border-box;
 }
-.saMinimized .saSidenav .saToggleGroup {
+.saMinimized .saToggleGroup {
   flex-direction: column;
 }
-.saSmallScreen .saSidenav .saToggleGroup {
+.saSmallScreen .saToggleGroup {
   padding: 0;
 }
-.saSidenav .saToggleGroup * {
+.saToggleGroup * {
   box-sizing: border-box;
 }
-.saSidenav .saToggleGroup button {
+.saToggleGroup button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -6106,7 +6106,7 @@ div.saPopupOverlay {
   position: relative;
   color: var(--Sa-Color-Label);
 }
-.saSidenav .saToggleGroup button::after {
+.saToggleGroup button::after {
   content: '';
   height: 100%;
   width: calc(100% + 1rem);
@@ -6114,96 +6114,96 @@ div.saPopupOverlay {
   top: 0;
   opacity: 0;
 }
-.saSidenav .saToggleGroup button:first-child {
+.saToggleGroup button:first-child {
   border-radius: 0.5rem 0 0 0.5rem;
 }
-.saSidenav .saToggleGroup button:first-child::after {
+.saToggleGroup button:first-child::after {
   left: -1rem;
 }
-.saMinimized .saSidenav .saToggleGroup button:first-child,
-.saWrapped.saSidenav .saToggleGroup button:first-child {
+.saMinimized .saToggleGroup button:first-child,
+.saWrapped.saToggleGroup button:first-child {
   border-radius: 0.5rem 0.5rem 0 0;
 }
-.saMinimized .saSidenav .saToggleGroup button:first-child::after,
-.saWrapped.saSidenav .saToggleGroup button:first-child::after {
+.saMinimized .saToggleGroup button:first-child::after,
+.saWrapped.saToggleGroup button:first-child::after {
   width: calc(100% + 2rem);
 }
-.saSidenav .saToggleGroup button:not(:last-child) {
+.saToggleGroup button:not(:last-child) {
   margin-right: -1px;
 }
-.saMinimized .saSidenav .saToggleGroup button:not(:last-child),
-.saWrapped.saSidenav .saToggleGroup button:not(:last-child) {
+.saMinimized .saToggleGroup button:not(:last-child),
+.saWrapped.saToggleGroup button:not(:last-child) {
   margin-right: 0;
   margin-bottom: -1px;
 }
-.saSidenav .saToggleGroup button:last-child {
+.saToggleGroup button:last-child {
   border-right-style: solid;
   border-width: 1px;
   border-radius: 0 0.5rem 0.5rem 0;
 }
-.saSidenav .saToggleGroup button:last-child::after {
+.saToggleGroup button:last-child::after {
   right: -1rem;
 }
-.saMinimized .saSidenav .saToggleGroup button:last-child,
-.saWrapped.saSidenav .saToggleGroup button:last-child {
+.saMinimized .saToggleGroup button:last-child,
+.saWrapped.saToggleGroup button:last-child {
   border-radius: 0 0 0.5rem 0.5rem;
 }
-.saMinimized .saSidenav .saToggleGroup button:last-child::after,
-.saWrapped.saSidenav .saToggleGroup button:last-child::after {
+.saMinimized .saToggleGroup button:last-child::after,
+.saWrapped.saToggleGroup button:last-child::after {
   width: calc(100% + 2rem);
 }
-.saMinimized .saSidenav .saToggleGroup button {
+.saMinimized .saToggleGroup button {
   min-width: 2.5rem;
   padding: 0;
 }
-.saSmallScreen .saSidenav .saToggleGroup button {
+.saSmallScreen .saToggleGroup button {
   min-height: 2.75rem;
 }
 @media (pointer: fine) {
-  .saSidenav .saToggleGroup button:hover {
+  .saToggleGroup button:hover {
     color: #1c57c6;
     background-color: #e5efff;
     border-color: #1c57c6;
     z-index: 3;
   }
-  .saSidenav .saToggleGroup button:hover .saIcon {
+  .saToggleGroup button:hover .saIcon {
     color: currentColor;
   }
 }
-.saSidenav .saToggleGroup button:active {
+.saToggleGroup button:active {
   color: #0f44a6;
   background-color: #bbd6ff;
   border-color: #0f44a6;
 }
-.saSidenav .saToggleGroup button:active:first-child {
+.saToggleGroup button:active:first-child {
   border-radius: 0.75rem 0 0 0.75rem;
 }
-.saMinimized .saSidenav .saToggleGroup button:active:first-child,
-.saWrapped.saSidenav .saToggleGroup button:active:first-child {
+.saMinimized .saToggleGroup button:active:first-child,
+.saWrapped.saToggleGroup button:active:first-child {
   border-radius: 0.75rem 0.75rem 0 0;
 }
-.saSidenav .saToggleGroup button:active:last-child {
+.saToggleGroup button:active:last-child {
   border-radius: 0 0.75rem 0.75rem 0;
 }
-.saMinimized .saSidenav .saToggleGroup button:active:last-child,
-.saWrapped.saSidenav .saToggleGroup button:active:last-child {
+.saMinimized .saToggleGroup button:active:last-child,
+.saWrapped.saToggleGroup button:active:last-child {
   border-radius: 0 0 0.75rem 0.75rem;
 }
-.saSidenav .saToggleGroup button[aria-selected="true"] {
+.saToggleGroup button[aria-selected="true"] {
   z-index: 2;
   background-color: #e5efff;
   color: #1c57c6;
   border-color: #2d6ce1;
 }
-.saSidenav .saToggleGroup button[aria-selected="true"] .saIcon {
+.saToggleGroup button[aria-selected="true"] .saIcon {
   color: currentColor;
 }
-.saSidenav .saToggleGroup button span {
+.saToggleGroup button span {
   overflow-wrap: anywhere;
   font-size: 0.875rem;
   line-height: 1rem;
 }
-.saMinimized .saSidenav .saToggleGroup button span {
+.saMinimized .saToggleGroup button span {
   display: none;
 }
 .saSidenav {
